<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_group"
        android:title="@string/groups" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover" />

    <item
        android:id="@+id/navigation_your_classes"
        android:icon="@drawable/ic_list"
        android:title="@string/your_classes" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_profile"
        android:title="@string/me" />

</menu>
