<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.immymemine.kevin.skillshare.activity.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageButton
            android:id="@+id/toolbar_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:tint="@color/IcActive"
            app:srcCompat="?android:attr/actionModeCloseDrawable"
            tools:layout_editor_absoluteX="387dp"
            tools:layout_editor_absoluteY="16dp" />

    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/google_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/corner_rounded_button_google"
        android:text="@string/sign_up_with_google"
        android:textColor="@android:color/background_light"
        android:textSize="16sp">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="Or"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/IcInactive"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/IcInactive"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/IcInactive"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/IcInactive"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:drawableTint="@android:color/transparent"
        android:text="@string/sign_up"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/policy"
        android:textColor="@color/IcInactive" />

</LinearLayout>
